examples/test/testpolicy7906.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7906
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key38: value49
      key40: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value3
          key6: value41
          key16: value1
      podSelector:
        matchLabels:
          key37: value27
